--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
     <link
@@ -43,16 +43,25 @@
       :has(> tool-tip):hover tool-tip {
         opacity: 1;
       }
+
+      html {
+        background-color: rgb(45, 48, 45);
+        font-family: "Rubik", sans-serif;
+        font-optical-sizing: auto;
+        font-style: normal;
+      }
+      .shadow-image {
+        -webkit-mask-image: linear-gradient(#000000, transparent);
+        mask-image: linear-gradient(to botton, black 80%, transparent 100%);
+      }
     </style>
     <title>Portfolio</title>
   </head>
 
-  <body>
-    <header class="flex flex-col bg-transparent/90 h-screen">
-      <nav class="flex justify-evenly items-center py-7 border-b-2">
-        <h1 class="font-bold text-xl text-yellow-300 italic">
-          Cesar Jauregui.dev
-        </h1>
+  <body class="lg:mx-0">
+    <header class="px-9">
+      <nav class="flex justify-evenly items-center pt-7">
+        <h1 class="font-bold text-xl text-yellow-300 italic">CJ.dev</h1>
         <ul class="hidden text-white gap-7 list-none md:flex">
           <li
             class="font-bold hover:text-yellow-500 transition duration-300 ease-in-out"
@@ -76,131 +85,69 @@
           </li>
         </ul>
       </nav>
-      <section class="flex justify-evenly items-center h-full">
-        <div class="flex flex-col px-3 md:px-0">
-          <h2 class="font-semibold text-lg sm:text-4xl text-white">
-            Soy
-            <span class="font-bold text-2xl sm:text-6xl animate-pulse"
-              >César Jauregui</span
-            >
-          </h2>
-          <p class="text-white pt-4 font-bold text-base sm:text-2xl">
-            Programador Full Stack
-          </p>
-          <ul class="flex pt-9 gap-5 items-center">
-            <li
-              class="transition ease hover:-translate-y-1 hover:scale-110 delay-150 duration-200"
-            >
-              <a href=""
-                ><i class="fa-brands fa-github fa-2xl text-white"></i>
-              </a>
-            </li>
-            <li
-              class="transition ease hover:-translate-y-1 hover:scale-110 delay-150 duration-200"
-            >
-              <a href=""
-                ><i class="fa-brands fa-linkedin fa-2xl text-blue-600"></i
-              ></a>
-            </li>
-            <li
-              class="transition ease hover:-translate-y-1 hover:scale-110 delay-150 duration-200"
-            >
-              <a href="" class=""
-                ><i class="fa-solid fa-envelope fa-2xl text-red-500/70"></i>
-              </a>
-            </li>
-            <div class="gap-x-2 hidden md:flex">
-              <p
-                id="materialTailwind"
-                class="block font-sans sm:text-base antialiased font-normal text-white leading-relaxed bg-mine-shaft-600 rounded-sm p-1"
+      <div class="flex flex-col items-center h-full">
+        <article class="max-w-full h-full rounded-md">
+          <div class="flex flex-col md:flex-row w-full h-full">
+            <header class="flex justify-center">
+              <img
+                src="/img/f1.png"
+                class="bg-contain bg-center h-96 bg-no-repeat shadow-image md:h-screen"
+                alt="Mi foto"
+              />
+            </header>
+            <article class="flex flex-col justify-center px-2">
+              <h4
+                class="text-center pt-4 font-medium text-white text-2xl md:text-5xl"
               >
-                cjaureguisaavedra@gmail.com
-              </p>
-              <button
-                data-clipboard-target="#materialTailwind"
-                class="btn relative h-8 max-h-[40px] w-8 max-w-[40px] select-none rounded-lg bg-gray-900 text-center align-middle font-sans text-xs font-medium uppercase text-white shadow-md transition-all hover:shadow-lg disabled:pointer-events-none disabled:opacity-50"
-                type="button"
-                id="btn"
-                aria-label="test"
-              >
-                <tool-tip role="tooltip"> Copiado </tool-tip>
-                <span
-                  class="absolute transform -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-                  ><i id="clip" class="fa-solid fa-clipboard"></i>
-                </span>
-              </button>
-            </div>
-            <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.11/dist/clipboard.min.js"></script>
-            <script defer>
-              let clipboard = new ClipboardJS(".btn");
-
-              clipboard.on("success", function (e) {
-                console.info("Action: ", e.action);
-              });
-
-              let clipBtn = document.querySelector("#btn");
-              let icon = document.querySelector("#clip");
-              clipBtn.addEventListener("click", function () {
-                icon.setAttribute("class", "fa-solid fa-check fa-bounce");
-                icon.setAttribute("class", "fa-solid fa-check");
-                //icon.removeClass("fa-solid fa-clipboard");
-                //icon.addClass("fa-solid fa-check");
-              });
-            </script>
-          </ul>
-        </div>
-        <div>
-          <img
-            src="/img/f1.png"
-            style="
-              -webkit-mask-image: -webkit-radial-gradient(
-                85% 85%,
-                circle,
-                transparent 7px,
-                black 8px
-              );
-              mask-image: radial-gradient(
-                circle at 85% 85%,
-                transparent 7px,
-                black 8px
-              );
-            "
-            class="w-80 h-full"
-            alt=""
-          />
-        </div>
-      </section>
+                César Jauregui
+                <p class="font-thin text-sm md:text-lg pt-4">
+                  Ingeniero de Sistemas - Full Stack
+                </p>
+              </h4>
+              <footer class="py-4">
+                <ul class="flex gap-5 items-center justify-center">
+                  <li
+                    class="transition ease hover:-translate-y-1 hover:scale-110 delay-150 duration-200"
+                  >
+                    <a href=""
+                      ><i class="fa-brands fa-github fa-2xl text-white"></i>
+                    </a>
+                  </li>
+                  <li
+                    class="transition ease hover:-translate-y-1 hover:scale-110 delay-150 duration-200"
+                  >
+                    <a href=""
+                      ><i class="fa-brands fa-linkedin fa-2xl text-blue-600"></i
+                    ></a>
+                  </li>
+                  <li
+                    class="transition ease hover:-translate-y-1 hover:scale-110 delay-150 duration-200"
+                  >
+                    <a href="" class=""
+                      ><i
+                        class="fa-solid fa-envelope fa-2xl text-red-500/70"
+                      ></i>
+                    </a>
+                  </li>
+                </ul>
+              </footer>
+            </article>
+          </div>
+        </article>
+      </div>
     </header>
-    <div
-      class="w-100 h-full"
-      style="
-        -webkit-mask-image: -webkit-radial-gradient(
-          85% 85%,
-          circle,
-          transparent 7px,
-          black 8px
-        );
-        mask-image: radial-gradient(
-          circle at 85% 85%,
-          transparent 7px,
-          black 8px
-        );
-      "
-    >
-      asdas
-    </div>
-    <main class="bg-mine-shaft-950">
-      <section>
+
+    <main class="bg-mine-shaft-950/50 text-white">
+      <section class="flex flex-col justify-evenly items-center">
         <h2>Sobre mi</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque velit
-          corporis minus earum quae sunt voluptatem laudantium molestiae
-          consequuntur dolorem tenetur iste, facilis itaque odio libero, alias,
-          assumenda aspernatur at? Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Aperiam eos voluptatibus reprehenderit, distinctio
-          quod eveniet a ab eum qui. Numquam, debitis distinctio! Similique
-          porro ducimus ullam possimus tempora sapiente sed?
+        <p class="max-w-full flex items-center justify-center">
+          Me llamo César Antonio Jauregui Saavedra, tengo 26 años y soy de Lima,
+          Perú, bachiller en Ingeniería de Sistemas e Informática. Desde muy
+          joven disfruto temas relacionadas al desarrollo de la tecnología y
+          programación. Me encantra trabajar en equipo y compartir mis
+          conocimientos.
         </p>
+        <p>sss</p>
       </section>
 
       <section>
